--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
+    "react-slick": "^0.23.1",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
