--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "jquery": "^3.3.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
     "react-slick": "^0.23.1",
+    "redux": "^4.0.0",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
