--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "reactexpress",
   "version": "1.0.0",
   "description": "shopFlowerFront ",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
     "start": "babel-node server",
+    "prestart": "cd client && yarn && yarn build",
     "server": "nodemon --exec babel-node server",
     "client": "npm start --prefix client ",
     "dev": "concurrently \"npm run server\" \"npm run client\""
@@ -14,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
     "mongoose": "^5.3.1",
     "react-loadable": "^5.5.0",
