--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
-.DS_Store
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
 node_modules
-/dist
-/build
 
-# local env files
+# testing
+coverage
+
+# production
+build
+
+dist
+
+# misc
+.DS_Store
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
