--- a/code/packages/client/package.json
+++ b/code/packages/client/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.9.3",
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
+    "ramda": "^0.25.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-loadable": "^5.5.0",
