--- a/code/packages/server/package.json
+++ b/code/packages/server/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^5.3.1",
     "ramda": "^0.25.0",
     "react-loadable": "^5.5.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
