--- a/code/packages/client/package.json
+++ b/code/packages/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.9.3",
     "axios": "^0.18.0",
+    "formik": "^1.3.2",
     "jquery": "^3.3.1",
     "ramda": "^0.25.0",
     "react": "^16.5.2",
