--- a/code/packages/server/package.json
+++ b/code/packages/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist",
-    "dev": "env PORT=5000 nodemon --exec babel-node src",
+    "dev": " nodemon --exec babel-node src",
     "build": "babel src --out-dir dist"
   },
   "author": "giang",
