--- a/code/packages/client/package.json
+++ b/code/packages/client/package.json
@@ -25,7 +25,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write 'src/**/*.(js|jsx)'",
     "precommit": "pretty-quick --staged"
   },
   "browserslist": [
@@ -34,6 +33,11 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "devDependencies": {
     "eslint-plugin-prettier": "^3.0.0",
     "husky": "^1.2.0",
