--- a/code/packages/client/.eslintrc
+++ b/code/packages/client/.eslintrc
@@ -1,6 +1,12 @@
 {
+  "parser": "babel-eslint",
   "extends": "react-app",
   "plugins": ["prettier"],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
     "prettier/prettier": "error"
   }
