--- a/code/packages/server/package.json
+++ b/code/packages/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist",
     "dev": " nodemon --exec babel-node src",
-    "build": "babel src --out-dir dist"
+    "build": "rm -rf dist && babel src --out-dir dist"
   },
   "author": "giang",
   "license": "MIT",
@@ -15,6 +15,7 @@
     "argon2": "^0.19.3",
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "concurrently": "^4.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
