--- a/code/packages/server/package.json
+++ b/code/packages/server/package.json
@@ -15,6 +15,8 @@
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
+    "connect-mongo": "^2.0.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.3.0",
