--- a/code/packages/server/package.json
+++ b/code/packages/server/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^4.0.1",
     "connect-mongo": "^2.0.2",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.3.0",
