--- a/code/packages/client/package.json
+++ b/code/packages/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "react-slick": "^0.23.1",
+    "react-stripe-elements": "^2.0.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
