--- a/code/packages/client/package.json
+++ b/code/packages/client/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
     "react-slick": "^0.23.1",
+    "react-stripe-elements": "^2.0.1",
     "react-transition-group": "^2.5.0",
     "recharts": "^1.4.1",
     "redux": "^4.0.0",
